[gd_scene load_steps=7 format=2]

[ext_resource path="res://LineEdit.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/ARIALBD 1.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://UI/HugePanel.png" type="Texture" id=3]
[ext_resource path="res://Function Presets/Object.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[node name="Functions" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="HugePanel" type="Sprite" parent="."]
position = Vector2( -122, 400 )
texture = ExtResource( 3 )

[node name="X" parent="." instance=ExtResource( 1 )]
margin_left = 141.0
margin_top = 180.0
margin_right = -1299.0
margin_bottom = -635.0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="Y" parent="." instance=ExtResource( 1 )]
margin_left = 336.0
margin_top = 180.0
margin_right = -1104.0
margin_bottom = -632.0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 140.0
margin_top = 142.0
margin_right = 478.0
margin_bottom = 178.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Position"
text = "Position"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 102.0
margin_top = 185.0
margin_right = 141.0
margin_bottom = 221.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]X:"
text = "X:"

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
margin_left = 297.0
margin_top = 185.0
margin_right = 336.0
margin_bottom = 221.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Y:"
text = "Y:"

[node name="ScaleX" parent="." groups=["scale"] instance=ExtResource( 1 )]
visible = false
margin_left = 141.0
margin_top = 492.0
margin_right = -1299.0
margin_bottom = -323.0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="ScaleY" parent="." groups=["scale"] instance=ExtResource( 1 )]
visible = false
margin_left = 336.0
margin_top = 492.0
margin_right = -1104.0
margin_bottom = -320.0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="RichTextLabel5" type="RichTextLabel" parent="." groups=["scale"]]
visible = false
margin_left = 140.0
margin_top = 454.0
margin_right = 478.0
margin_bottom = 490.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Scale"
text = "Scale"

[node name="RichTextLabel6" type="RichTextLabel" parent="." groups=["scale"]]
visible = false
margin_left = 102.0
margin_top = 497.0
margin_right = 141.0
margin_bottom = 533.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]X:"
text = "X:"

[node name="RichTextLabel7" type="RichTextLabel" parent="." groups=["scale"]]
visible = false
margin_left = 297.0
margin_top = 497.0
margin_right = 336.0
margin_bottom = 533.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Y:"
text = "Y:"

[node name="Rotation" parent="." groups=["rotate"] instance=ExtResource( 1 )]
visible = false
margin_left = 237.0
margin_top = 339.0
margin_right = -1203.0
margin_bottom = -476.0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="RichTextLabel8" type="RichTextLabel" parent="." groups=["rotate"]]
visible = false
margin_left = 237.0
margin_top = 301.0
margin_right = 397.0
margin_bottom = 337.0
rect_pivot_offset = Vector2( 189, 14 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Rotation"
text = "Rotation"

[connection signal="text_changed" from="X" to="." method="_on_X_text_changed"]
[connection signal="text_changed" from="Y" to="." method="_on_Y_text_changed"]
[connection signal="text_changed" from="ScaleX" to="." method="_on_ScaleX_text_changed"]
[connection signal="text_changed" from="ScaleY" to="." method="_on_ScaleY_text_changed"]
[connection signal="text_changed" from="Rotation" to="." method="_on_Rotation_text_changed"]
